# Drone

./: README.md  package.xml  setup.cfg  setup.cfg.bak  setup.py
config/: navigation_params.yaml  ros_gz_bridge.yaml
launch/: complete.launch.py  complete_launch.py
opencv_drone_vision/: mission_logger.py  moving_obstacle.py  navigation_core.py  opencv_navigation.py  opencv_navigation_v2.py  opencv_navigation_v4.py  opencv_navigation_v4_instrumented.pyZone.Identifier  plot_results.py  plot_results.pyZone.Identifier
urdf/: x3_drone.urdf
worlds/: benchmark_world.sdf  drone_arena.sdf  forest_world.sdf  maze_world.sdf  warehouse_world.sdf
